--- a/styles11.css
+++ b/styles11.css
@@ -5,10 +5,10 @@
     height: 768;
 }
 #gameMessage{
-    position: fixed;
-    margin: auto;
-    top: 7%;
-    left: 29%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    translate: -50% -160%;
     font-size: 128px;
     color: rgb(154, 37, 24);
     background-color: rgba(14, 231, 3, 0.722);
